Fjernet avhengighet til TPSF